package interfaces;
import classes.CelestialBody;
import classes.Neznaika;
import classes.SpaceBoots;
import classes.Location;

public interface Afraid {
    void afraid(Neznaika name1, SpaceBoots name2, Location name3, CelestialBody name4);
}