package interfaces;

// import classes.Neznaika;
// import classes.SpaceBoots;
import classes.Person;
import classes.SpaceBoots;

public interface Force {
    void force(Person name1, SpaceBoots name2);
}