package interfaces;

// import classes.Neznaika;
// import classes.SpaceBoots;
// import classes.Person;
// import classes.SpaceBoots;
import classes.CelestialBody;
// import classes.CreatureObj;

public interface GetWeight {
    void getweight(CelestialBody name2, CelestialBody name3);
}