package interfaces;
import classes.CelestialBody;
import classes.Neznaika;
import classes.SpaceBody;
import classes.SpaceBoots;
import classes.Location;

public interface Imagine {
    void imagine(Neznaika name1, Location name2, SpaceBody name3, SpaceBody name4, CelestialBody name5, SpaceBoots name6);
}