package interfaces;
import classes.CelestialBody;
import classes.CreatureObj;
// import classes.Neznaika;
// import classes.SpaceBoots;
//import classes.Person;

public interface Jump {
    void jump(CelestialBody name2, CreatureObj name3, CreatureObj name4);
}