package interfaces;

import classes.Location;

public interface MountainUp {
    void mountain_up(Location name1, Location name3);
}