package interfaces;

import classes.Location;

public interface Road {
    void road(Location name1);
}